@@ -1,8 +1,12 @@
 			CHANGELOG for KAME kit
 
-$KAME: CHANGELOG,v 1.1670 2001/05/13 08:44:46 jinmei Exp $
+$KAME: CHANGELOG,v 1.1671 2001/05/13 15:45:06 suz Exp $
 
 <200105>
+Mon May 14 00:42:52 JST 2001	suz@sdl.hitachi.co.jp
+	* kame/kame/mld6query/mld6.c: fixed a bug in argument handling.
+	from Mickael Hoerdt <hoerdt@clarinet.u-strasbg.fr>
+
 2001-05-13  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
 	* bsdi4/INSTALL: added a note about ppp.diff
 	based on a comment from <murakami@pana.net>.
